--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <!-- Add this base tag to ensure relative paths work correctly -->
     <base href="/js-template/">
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="core/router.js" defer></script>
+
 </head>
-<body>
+<body class="dark">
     <div id="app">
-        <!-- Your app content will be rendered here -->
+        <!-- The app content will be rendered here -->
         <p>Loading application...</p>
     </div>
-    <script type="module" src="./router.js"></script>
 </body>
 </html>
